<resources>
    <string name="app_name">ToDoApp</string>

    <string name="subhead">Выполнено — %1$d </string>
    <string name="head">Мои дела</string>
    <string name="note_tmp">Купить что-нибудь</string>
    <string name="newNote">Добавить новое дело</string>
    <string name="delete">Удалить</string>
    <string name="note_hint">Что нужно сделать...</string>
    <string name="priority_standart">Нет</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_hight">!! Высокий</string>
    <string name="deadline_empty">не задано</string>
    <string name="emptyText_Toast">Заметка не может быть пустой</string>
    <string name="save_button">СОХРАНИТЬ</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="deadlineSubhead">Сделать до:</string>
    <string name="done">Сменить статус</string>
    <string name="update">Редактировать</string>
    <string name="hello">Привет</string>
    <string name="synch">Дела синхронизированы</string>
    <string name="not_synch">Дела не синхронизированы. Версия данных от</string>
    <string name="not_synch_empty">Дела не синхронизированы. Сохраненные данные не найдены</string>
    <string name="unexpected_error">Непредвиденная ошибка</string>
    <string name="er_400">Ошибка 400: Неверный запрос</string>
    <string name="er_401">Ошибка 401: Ошибка авторизации</string>
    <string name="er_404">Ошибка 404: Элемент не найден</string>
    <string name="er_unexpected">Неожиданный код состояния HTTP</string>
    <string name="er_internal">Ошибка выполнения приложения</string>
    <string name="permission_request">"Возможность отправлять уведомления, позволяет напоминать о важных делах \n \n Согласиться получать уведомления? "</string>
    <string name="Decline">Отклонить</string>
    <string name="Yes">Да</string>
    <string name="channel_description">Used for the note notifications</string>
    <string name="choose_priority">Выберите приоитет</string>
    <string name="undo">Отменить</string>
    <string name="isDelete">Дело удаляется. Отменить?</string>
    <string name="notify_message"> Требуется завршить дело. Приоритет: </string>

</resources>