<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_note_action"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="200dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_actionPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/L_label_tertiary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_done"
                style="@style/TextView.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:paddingStart="16dp"
                android:paddingEnd="80dp"
                android:text="@string/done" />


            <TextView
                android:id="@+id/menu_update"
                style="@style/TextView.Body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:paddingStart="16dp"
                android:paddingEnd="80dp"
                android:text="@string/update" />


            <TextView
                android:id="@+id/menu_delete"
                style="@style/TextView.Body.Red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:paddingStart="16dp"
                android:paddingEnd="80dp"
                android:text="@string/delete"

                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>